@@ -8,6 +8,7 @@ FEATURE: UI   | Added "Open Transfer Bar on start" and "Remember Transfer Bar" l
 
 CHANGE: Core  | Speedup hash-checking by ~30% / less CPU usage [The 8472]
 CHANGE: UI    | Provide both "per-torrent" and "across-torrents" speed menu options [amc1]
+CHANGE: Plug  | Plugins can now dynamically register language resource bundles [amc1]
 
 BUGFIX: Core  | Fixed bug when trying to add torrents with semi-colon characters in filename [amc1]
 
